--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/green-aesthetic-wallpaper-for-pc.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/slide2.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Rampersad Sivanee</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Mobile Developer, Web Developer, Freelancer, Content Creator, Designer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -83,35 +83,48 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/mypicture.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/20210704_095018.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Rampersad Sivanee</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Aspiring Backend developer</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Aspiring Backend and Mobile Dev</span></p>
                         <p><span class="title-s">Email: </span> <span>simranrampersad13@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>+23057044258</span></p>
+                        <p><span class="title-s">LinkedIn: </span> <span><a href = "https://www.linkedin.com/in/rampersad-sivanee-16b1a51b6/" target = "_blank">linkedin.com/in/rampersad-sivanee-16b1a51b6/</a></span></p>
                       </div>
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Skill</p>
-                    <span>HTML</span> <span class="pull-right">85%</span>
+                    <p class="title-s">Skills</p>
+                    <span>HTML</span> <span class="pull-right">70%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>CSS3</span> <span class="pull-right">75%</span>
+                    <span>CSS3</span> <span class="pull-right">55%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Dart</span> <span class="pull-right">75%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>PHP</span> <span class="pull-right">50%</span>
+                    <span>JAVASCRIPT</span> <span class="pull-right">40%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                    <span>C++</span> <span class="pull-right">60%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>Python</span> <span class="pull-right">85%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>SQL</span> <span class="pull-right">75%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -123,9 +136,31 @@
                       </h5>
                     </div>
                     <p class="lead">
-                        Proactive, ambitious, reliable and responsible team member with a positive communication style and leadership aptitudes. 
-                        I am also proficient in many programming languages and have excellent technological skills. I am excellent with working with 
-                        others and possess great diplomatic skills which I acquired when working as an executive member of the UNESCO club at my previous school.
+                        Currently a first year Bsc(hons) Computer Science student at the University of Mauritius. 
+                        I am proactive, ambitious, reliable and a responsible team member with a positive communication 
+                        style and leadership aptitudes. I previously partook a leadership training program where we had 
+                        to set up our own NGO and provide social services related to the social cause we were assigned. I 
+                        helped in creating the interface for our website using wordpress.<br><br> I was also an executive member of 
+                        the UNESCO club at my previous school and a current event organiser at the UOM Oracle club. I regualrly 
+                        create posters and other graphical contents to promote our events. I am well-versed in many programming 
+                        languages. In my first year, I built the back-end of a translation webapp using C++, co-designed and 
+                        co-implemented a SQL database and built a simple login page using flutter and firebase fro a mobile app.
+                        I recently followed a 3 months course on AI where I learned deep learning and machine learning.
+                    </p>
+                    <div class="title-box-2">
+                      <h5 class="title-left">
+                        Qualifications
+                      </h5>
+                    </div>
+                    <p class="lead">
+                      <ul>
+                        <li>Cisco Networking Academy - Introduction to IoT</li>
+                        <li>Cisco Networking Academy - Introduction to Cybersecurity</li> 
+                        <li>Cisco Networking Academy - Entrepreneurship</li>
+                        <li>Huawei HCIA AI Certificate</li> 
+                        <li>National Leadership Engine</li> 
+                        <li>Top 500 scholarships for A levels</li>
+                      </ul>
                     </p>
                   </div>
                 </div>
@@ -136,7 +171,7 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Services Section ======= 
     <section id="services" class="services-mf pt-5 route">
       <div class="container">
         <div class="row">
@@ -156,7 +191,7 @@
                 <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Web Design</h2>
+                <h2 class="s-title">Mobile Development</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -183,40 +218,10 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-bar-chart"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Photography</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
                 <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Responsive Design</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-brightness-high"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Graphic Design</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
@@ -242,9 +247,9 @@
           </div>
         </div>
       </div>
-    </section><!-- End Services Section -->
+    </section> End Services Section -->
 
-    <!-- ======= Counter Section ======= -->
+    <!-- ======= Counter Section ======= 
     <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
@@ -255,7 +260,7 @@
                 <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="450" data-purecounter-duration="1" class="counter purecounter"></p>
+                <p data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="counter purecounter"></p>
                 <span class="counter-text">WORKS COMPLETED</span>
               </div>
             </div>
@@ -266,11 +271,12 @@
                 <span class="ico-circle"><i class="bi bi-journal-richtext"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="counter purecounter"></p>
+                <p data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="counter purecounter"></p>
                 <span class="counter-text">YEARS OF EXPERIENCE</span>
               </div>
             </div>
           </div>
+       
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box pt-4 pt-md-0">
               <div class="counter-ico">
@@ -293,18 +299,19 @@
               </div>
             </div>
           </div>
+          
         </div>
       </div>
-    </div><!-- End Counter Section -->
-  </main><!-- End #main -->
-
+    </div> End Counter Section 
+  </main> End #main 
+  -->
   <!-- ======= Footer ======= -->
   <footer>
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>Rampersad Sivanee</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
@@ -312,7 +319,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
             </div>
           </div>
         </div>
