Added education qualifications and projects

--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#work">Work</a></li>
-          <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#services">Furthur details</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -147,21 +144,6 @@
                         co-implemented a SQL database and built a simple login page using flutter and firebase fro a mobile app.
                         I recently followed a 3 months course on AI where I learned deep learning and machine learning.
                     </p>
-                    <div class="title-box-2">
-                      <h5 class="title-left">
-                        Qualifications
-                      </h5>
-                    </div>
-                    <p class="lead">
-                      <ul>
-                        <li>Cisco Networking Academy - Introduction to IoT</li>
-                        <li>Cisco Networking Academy - Introduction to Cybersecurity</li> 
-                        <li>Cisco Networking Academy - Entrepreneurship</li>
-                        <li>Huawei HCIA AI Certificate</li> 
-                        <li>National Leadership Engine</li> 
-                        <li>Top 500 scholarships for A levels</li>
-                      </ul>
-                    </p>
                   </div>
                 </div>
               </div>
@@ -171,14 +153,14 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Services Section ======= 
+    <!-- ======= Furtheur details Section ======= -->
     <section id="services" class="services-mf pt-5 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Services
+                Furthur details
               </h3>
               <div class="line-mf"></div>
             </div>
@@ -191,11 +173,12 @@
                 <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Mobile Development</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                <h2 class="s-title">Education</h2>
+                <p class="s-description ">
+                  <ul>
+                    <li>Bsc(hons) Computer Science at the University of Mauriitus (2020-present)</li>
+                    <li>Droopnath Ramphul State College (2013-2019)</li> 
+                  </ul>
                 </p>
               </div>
             </div>
@@ -206,11 +189,16 @@
                 <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Web Development</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                <h2 class="s-title">Qualifications</h2>
+                <p class="s-description ">
+                  <ul>
+                    <li>Cisco Networking Academy - Introduction to IoT</li>
+                    <li>Cisco Networking Academy - Introduction to Cybersecurity</li> 
+                    <li>Cisco Networking Academy - Entrepreneurship</li>
+                    <li>Huawei HCIA AI Certificate</li> 
+                    <li>National Leadership Engine</li> 
+                    <li>Top 500 scholarships for A levels</li>
+                  </ul>
                 </p>
               </div>
             </div>
@@ -221,33 +209,21 @@
                 <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Responsive Design</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-calendar4-week"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Marketing Services</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                <h2 class="s-title">Projects done in my first year</h2>
+                <p class="s-description ">
+                  <ul>
+                    <li>Backend of a translating webapp using C++</li>
+                    <li>Interface of a website using wordpress</li> 
+                    <li>SQL databse design and implementation for a club management system</li>
+                    <li>Flutter login page</li>
+                  </ul>
                 </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section> End Services Section -->
+    </section> <!-- End Furtheur details Section -->
 
     <!-- ======= Counter Section ======= 
     <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
